# Parcer_Vacancy

./: README.md  pyproject.toml
src/: API_work.py  utils.py  vacancies.json  vacancy.py  work_file.py
